# materials

./: .dockerignore  .env_example  .flake8  .gitignore  .prettierrc.toml  .pylintrc  .~lock.materials.xlsx#  Dockerfile  Makefile  README.md  dump.json  entrypoint.sh  gunicorn.conf.py  materials.conf  materials.xlsx  nginx.Dockerfile  pyproject.toml  pytest.ini  query_debugger.py  superuser.json
compose/: app.yaml  celery.yaml  nginx.yaml  storages.yaml
core/api/: urls.py
core/api/v1/: urls.py
core/api/v1/catalog/: urls.py
core/api/v1/catalog/services/: __init__.py  base_service.py  category_service.py  (+2 more)
core/apps/catalog/: admin.py  apps.py
core/apps/catalog/migrations/: 0001_initial.py  0002_alter_categorymodel_parent_and_more.py  0003_alter_categorymodel_title.py  0004_documentmodel.py  0005_alter_documentmodel_status.py  0006_alter_documentmodel_options.py  0007_alter_documentmodel_options.py  0008_remove_documentmodel_file_documentmodel_file_path.py  0009_alter_documentmodel_status.py  0010_alter_categorymodel_parent.py  0011_categorymodel_category_sort_idx_and_more.py  0012_remove_documentmodel_file_path_documentmodel_file.py  0013_alter_documentmodel_file.py  0014_remove_documentmodel_title.py  0015_alter_documentmodel_file.py
core/apps/catalog/models/: __init__.py  category.py  document.py  material.py
core/apps/catalog/serializers/: __init__.py  category.py  document.py  material.py
core/apps/common/: models.py  readme.txt  serializers.py
core/project/: asgi.py  celery.py  urls.py  wsgi.py
core/project/settings/: base.py  local.py  test.py
(+43 files in other folders)
